Added improvements over code quality
